added grid and images styles

--- a/index.html
+++ b/index.html
@@ -57,12 +57,122 @@
                 <img src="images/4.jpg" alt="">
             </div>
             <div class="album_contents">
+                <h2>Album Title Title</h2>
+                <p class="album__artist">Artist Name</p>
+                <p>Lorem ipsum dolor sit amet consectetur .</p>
+            </div>
+        </div>
+
+
+
+
+        <div class="album">
+            <div class="album_img">
+                <img src="images/1.jpg" alt="">
+            </div>
+            <div class="album_contents">
                 <h2>Album Title</h2>
                 <p class="album__artist">Artist Name</p>
                 <p>Lorem ipsum dolor sit amet consectetur .</p>
             </div>
         </div>
 
+        
+
+        <div class="album">
+            <div class="album_img">
+                <img src="images/2.jpg" alt="">
+            </div>
+            <div class="album_contents">
+                <h2>Album Title</h2>
+                <p class="album__artist">Artist Name</p>
+                <p>Lorem ipsum dolor sit amet consectetur .</p>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="album">
+            <div class="album_img">
+                <img src="images/3.jpg" alt="">
+            </div>
+            <div class="album_contents">
+                <h2>Album Title</h2>
+                <p class="album__artist">Artist Name</p>
+                <p>Lorem ipsum dolor sit amet consectetur .</p>
+            </div>
+        </div>
+
+
+
+
+        <div class="album">
+            <div class="album_img">
+                <img src="images/4.jpg" alt="">
+            </div>
+            <div class="album_contents">
+                <h2>Album Title Title</h2>
+                <p class="album__artist">Artist Name</p>
+                <p>Lorem ipsum dolor sit amet consectetur .</p>
+            </div>
+        </div>
+
+
+
+        <div class="album">
+            <div class="album_img">
+                <img src="images/1.jpg" alt="">
+            </div>
+            <div class="album_contents">
+                <h2>Album Title</h2>
+                <p class="album__artist">Artist Name</p>
+                <p>Lorem ipsum dolor sit amet consectetur .</p>
+            </div>
+        </div>
+
+        
+
+        <div class="album">
+            <div class="album_img">
+                <img src="images/2.jpg" alt="">
+            </div>
+            <div class="album_contents">
+                <h2>Album Title</h2>
+                <p class="album__artist">Artist Name</p>
+                <p>Lorem ipsum dolor sit amet consectetur .</p>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="album">
+            <div class="album_img">
+                <img src="images/3.jpg" alt="">
+            </div>
+            <div class="album_contents">
+                <h2>Album Title</h2>
+                <p class="album__artist">Artist Name</p>
+                <p>Lorem ipsum dolor sit amet consectetur .</p>
+            </div>
+        </div>
+
+
+
+
+        <div class="album">
+            <div class="album_img">
+                <img src="images/4.jpg" alt="">
+            </div>
+            <div class="album_contents">
+                <h2>Album Title Title</h2>
+                <p class="album__artist">Artist Name</p>
+                <p>Lorem ipsum dolor sit amet consectetur .</p>
+            </div>
+        </div>
     </div>
 
 </body>
